objects/Submission__c.object
<CustomObject>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Submission No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>